--- a/package.json
+++ b/package.json
@@ -9,10 +9,20 @@
     "web": "expo start --web"
   },
   "dependencies": {
+    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-navigation/native": "^7.0.17",
+    "@react-navigation/native-stack": "^7.3.1",
     "expo": "~52.0.40",
+    "expo-camera": "^16.0.18",
+    "expo-crypto": "^14.0.2",
+    "expo-print": "^14.0.3",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
-    "react-native": "0.76.7"
+    "react-native": "0.76.7",
+    "react-native-paper": "^5.13.1",
+    "react-native-qrcode-svg": "^6.3.15",
+    "react-native-safe-area-context": "^5.3.0",
+    "react-native-screens": "^4.9.2"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
