--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
     "expo": "~52.0.40",
     "expo-camera": "^16.0.18",
     "expo-crypto": "^14.0.2",
+    "expo-linking": "^7.0.5",
     "expo-print": "^14.0.3",
     "expo-status-bar": "~2.0.1",
     "react": "18.3.1",
