chore: add ability to be able to make ota updates

--- a/app.json
+++ b/app.json
@@ -17,14 +17,21 @@
     ],
     "ios": {
       "supportsTablet": true,
-      "bundleIdentifier": "com.myqrlist.app"
+      "bundleIdentifier": "com.myqrlist.app",
+      "infoPlist": {
+        "ITSAppUsesNonExemptEncryption": false
+      }
     },
     "android": {
       "adaptiveIcon": {
         "foregroundImage": "./assets/adaptive-icon.png",
         "backgroundColor": "#ffffff"
       },
-      "package": "com.myqrlist.app"
+      "package": "com.myqrlist.app",
+      "permissions": [
+        "android.permission.CAMERA",
+        "android.permission.RECORD_AUDIO"
+      ]
     },
     "web": {
       "favicon": "./assets/favicon.png"
@@ -39,6 +46,18 @@
           "recordAudioAndroid": true
         }
       ]
-    ]
+    ],
+    "extra": {
+      "eas": {
+        "projectId": "0c334242-6dbb-4cf7-99fe-3903c583b7b7"
+      }
+    },
+    "updates": {
+      "fallbackToCacheTimeout": 0,
+      "url": "https://u.expo.dev/0c334242-6dbb-4cf7-99fe-3903c583b7b7"
+    },
+    "runtimeVersion": {
+      "policy": "appVersion"
+    }
   }
 }
