--- a/package.json
+++ b/package.json
@@ -21,12 +21,14 @@
     "expo-linking": "^7.0.5",
     "expo-print": "^14.0.3",
     "expo-status-bar": "~2.0.1",
+    "expo-updates": "^0.28.17",
     "react": "18.3.1",
     "react-native": "0.76.7",
     "react-native-paper": "^5.13.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2"
+    "react-native-screens": "^4.9.2",
+    "expo-dev-client": "~5.0.20"
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
