--- a/package.json
+++ b/package.json
@@ -11,23 +11,23 @@
     "format:check": "prettier --check \"src/**/*.{ts,tsx}\""
   },
   "dependencies": {
-    "@react-native-async-storage/async-storage": "^2.1.2",
+    "@react-native-async-storage/async-storage": "1.23.1",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/native-stack": "^7.3.1",
-    "expo": "~52.0.40",
+    "expo": "~52.0.47",
     "expo-camera": "^16.0.18",
     "expo-crypto": "^14.0.2",
     "expo-image-picker": "^16.0.6",
     "expo-linking": "^7.0.5",
     "expo-print": "^14.0.3",
     "expo-status-bar": "~2.0.1",
-    "expo-updates": "^0.28.17",
+    "expo-updates": "~0.27.4",
     "react": "18.3.1",
-    "react-native": "0.76.7",
+    "react-native": "0.76.9",
     "react-native-paper": "^5.13.1",
     "react-native-qrcode-svg": "^6.3.15",
-    "react-native-safe-area-context": "^5.3.0",
-    "react-native-screens": "^4.9.2",
+    "react-native-safe-area-context": "4.12.0",
+    "react-native-screens": "~4.4.0",
     "expo-dev-client": "~5.0.20"
   },
   "devDependencies": {
