--- a/package.json
+++ b/package.json
@@ -15,11 +15,11 @@
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/native-stack": "^7.3.1",
     "expo": "~52.0.47",
-    "expo-camera": "^16.0.18",
-    "expo-crypto": "^14.0.2",
-    "expo-image-picker": "^16.0.6",
-    "expo-linking": "^7.0.5",
-    "expo-print": "^14.0.3",
+    "expo-camera": "~16.0.18",
+    "expo-crypto": "~14.0.2",
+    "expo-image-picker": "~16.0.6",
+    "expo-linking": "~7.0.5",
+    "expo-print": "~14.0.3",
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.27.4",
     "react": "18.3.1",
