--- a/app.json
+++ b/app.json
@@ -43,7 +43,8 @@
         {
           "cameraPermission": "Allow $(PRODUCT_NAME) to access your camera",
           "microphonePermission": "Allow $(PRODUCT_NAME) to access your microphone",
-          "recordAudioAndroid": true
+          "recordAudioAndroid": true,
+          "fabric": false
         }
       ]
     ],
