--- a/package.json
+++ b/package.json
@@ -14,8 +14,9 @@
     "db:studio": "drizzle-kit studio"
   },
   "dependencies": {
+    "@apollo/client": "^3.13.9",
     "@libsql/client": "^0.15.11",
-    "@react-native-async-storage/async-storage": "1.23.1",
+    "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/native-stack": "^7.3.1",
@@ -29,9 +30,11 @@
     "expo-print": "~14.0.3",
     "expo-status-bar": "~2.0.1",
     "expo-updates": "~0.27.4",
+    "graphql": "^16.11.0",
     "react": "18.3.1",
     "react-native": "0.76.9",
     "react-native-gesture-handler": "~2.20.2",
+    "react-native-keychain": "^10.0.0",
     "react-native-paper": "^5.13.1",
     "react-native-qrcode-svg": "^6.3.15",
     "react-native-reanimated": "~3.16.1",
@@ -40,6 +43,7 @@
   },
   "devDependencies": {
     "@babel/core": "^7.25.2",
+    "@react-native-community/cli": "^20.0.0",
     "@types/react": "~18.3.12",
     "@typescript-eslint/eslint-plugin": "^8.27.0",
     "@typescript-eslint/parser": "^8.27.0",
