--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   },
   "dependencies": {
     "@apollo/client": "^3.13.9",
+    "@growthbook/growthbook-react": "^1.6.1",
     "@libsql/client": "^0.15.11",
     "@react-native-async-storage/async-storage": "^1.23.1",
     "@react-navigation/bottom-tabs": "^7.4.6",
