--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "@react-navigation/bottom-tabs": "^7.4.6",
     "@react-navigation/native": "^7.0.17",
     "@react-navigation/native-stack": "^7.3.1",
+    "@supabase/supabase-js": "^2.55.0",
     "drizzle-orm": "^0.44.4",
     "expo": "~52.0.47",
     "expo-camera": "~16.0.18",
